--- a/app/globals.css
+++ b/app/globals.css
@@ -24,6 +24,9 @@
   --border: rgba(148, 163, 184, 0.1);
 }
 
+html {
+  scroll-behavior: smooth !important;
+}
 body {
   background: var(--background);
   color: var(--foreground);
